# SwiftRT

./: .gitignore  CMakeLists.txt
include/OpenImageDenoise/: oidn.h  oidn.hpp  version.h
src/: buffer.cpp  buffer.h  camera.cpp  camera.h  main.cpp  material.cpp  material.h  model.cpp  model.h  postproc.cpp  postproc.h  raytracing.cpp  raytracing.h
